--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<html>
+  <title>
+    First Website
+  </title>
+  
+  <body>
+    <h1>this is first page</h1>
+  </body>
+  
+  <style>
+    body{
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+</html>
